feat (secure): cookie secure, author authen